@@ -1,3 +1,7 @@
+2003-08-12  Keisuke Nishida  <knishida@netlab.jp>
+
+	* common.h, common.c (cob_return_code): Removed.
+
 2003-08-10  Keisuke Nishida  <knishida@netlab.jp>
 
 	* common.h (COB_FLAG_BINARY_SWAP): New macro.
